// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FormSubmission > does not render cancel button when cancel text and cancel action are not provided 1`] = `
<div>
  <div
    class="tw:grid tw:gap-2 tw:mt-3"
  >
    <button
      class="tw:font-medium tw:transition-colors tw:duration-200 tw:ease-in-out tw:min-h-[44px] tw:flex tw:items-center tw:justify-center tw:gap-2 tw:bg-[var(--color-success)] tw:text-white tw:hover:opacity-90 tw:active:opacity-80 tw:h-10 tw:px-4 tw:text-sm tw:rounded-lg tw:w-full tw:cursor-pointer"
      type="submit"
    >
      foo
    </button>
  </div>
</div>
`;

exports[`FormSubmission > renders the submit and cancel 1`] = `
<div>
  <div
    class="tw:grid tw:gap-2 tw:mt-3"
  >
    <button
      class="tw:font-medium tw:transition-colors tw:duration-200 tw:ease-in-out tw:min-h-[44px] tw:flex tw:items-center tw:justify-center tw:gap-2 tw:bg-[var(--color-success)] tw:text-white tw:hover:opacity-90 tw:active:opacity-80 tw:h-10 tw:px-4 tw:text-sm tw:rounded-lg tw:w-full tw:cursor-pointer"
      type="submit"
    >
      foo
    </button>
    <button
      class="tw:font-medium tw:transition-colors tw:duration-200 tw:ease-in-out tw:min-h-[44px] tw:flex tw:items-center tw:justify-center tw:gap-2 tw:text-[var(--color-text-secondary)] tw:hover:bg-[var(--color-surface-overlay)] tw:active:bg-[var(--color-surface-raised)] tw:h-10 tw:px-4 tw:text-sm tw:rounded-lg tw:w-full tw:cursor-pointer"
      type="button"
    >
      bar
    </button>
  </div>
</div>
`;
